Visibility issue cleared.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -43,5 +43,4 @@
 }
 
 #info_section {
-  visibility: hidden;
 }
